--- a/A3/fit_empirical_data.Rmd
+++ b/A3/fit_empirical_data.Rmd
@@ -190,7 +190,8 @@ draws_SB <- as_draws_df(fit2SB$draws())
 ggplot(draws_SB, aes(.iteration, bias, group = .chain, color=.chain)) + 
   geom_line() +
   labs(title = "Simple Bayes - Bias") +
-  theme_classic()
+  theme_classic() +
+  theme(legend.position = 'none') +
 
 # SD 
 ggplot(draws_SB, aes(.iteration, SD, group = .chain, color=.chain)) + 
@@ -205,7 +206,7 @@ ggplot(draws_SB) +
   geom_density(aes(bias_prior), fill="red", alpha=0.3) + # inv.logit bias_win_prior
   ylab("Posterior Density") +
   theme_classic() + 
-  labs(title = "Prior and posterior distribution of bias")
+  labs(title = "Bias") +
 
 # sd 
 ggplot(draws_SB) +
@@ -213,123 +214,79 @@ ggplot(draws_SB) +
   geom_density(aes(SD_prior), fill="red", alpha=0.3) + # inv.logit bias_win_prior
   ylab("Posterior Density") +
   theme_classic() + 
-  labs(title = "Prior and posterior distribution of SD")
-```
-
-```{r}
-# count number of predictions which are more than 8 or less than 1
-
-# trial no 1
-draws_SB %>% mutate(
-  predictions = round(inv_logit_scaled(`post_preds[1]`)*9, 0)) %>% 
-  count(predictions > 8) # 2 out of 6000
-
-draws_SB %>% mutate(
-  predictions = round(inv_logit_scaled(`post_preds[1]`)*9, 0)) %>% 
-  count(predictions < 1) # 2 out of 6000
-
-# trial no 2
-draws_SB %>% mutate(
-  predictions = round(inv_logit_scaled(`post_preds[2]`)*9, 0)) %>% 
-  count(predictions > 8) # 0 out of 6000 
-
-draws_SB %>% mutate(
-  predictions = round(inv_logit_scaled(`post_preds[2]`)*9, 0)) %>% 
-  count(predictions < 1) # 148 out of 6000
-
-# trial no 10
-draws_SB %>% mutate(
-  predictions = round(inv_logit_scaled(`post_preds[10]`)*9, 0)) %>% 
-  count(predictions > 8) # 56 out of 6000 
-
-draws_SB %>% mutate(
-  predictions = round(inv_logit_scaled(`post_preds[10]`)*9, 0)) %>% 
-  count(predictions < 1) # 0 out of 6000
-
-# trial no 57
-draws_SB %>% mutate(
-  predictions = round(inv_logit_scaled(`post_preds[57]`)*9, 0)) %>% 
-  count(predictions > 8) # 5 out of 6000 
-
-draws_SB %>% mutate(
-  predictions = round(inv_logit_scaled(`post_preds[57]`)*9, 0)) %>% 
-  count(predictions < 1) # 0 out of 6000
+  labs(title = "SD")
 ```
 
 
-```{r}
-# for loop to count how many times different post preds were out of bounds ( > 8 | < 1)
-greater = tibble()
-lesser = tibble()
-greater_no = tibble()
-lesser_no = tibble()
-
-for(i in 1:70){ # 70 trials = 70 post pred columns 
-  col_no = i # post preds column number
-  post_no = paste0("post_preds[", col_no, "]") # paste number into column name
-  
-  # get predictions which are greater than 8
-  tmp2 = tibble() #placeholder
-  tmp = draws_SB %>% 
-    mutate(
-    predictions = round(inv_logit_scaled(!!as.name(post_no))*9, 0)) %>% 
-    count(predictions > 8) 
-  
-  # counting number of times predictions were greater than 8 and binding it to a df
-  if(any(tmp == T)){
-    tmp2 = rbind(tmp2, tmp)
-    tmp2 = tmp2 %>% slice(2)
-    greater = rbind(greater, tmp2)
-    greater_no = rbind(greater_no, post_no)
-  }
-  
-  
-  # get predictions which are less than 1 
-  tmp3 <- tibble() # placeholder
-  tmp = draws_SB %>% 
-    mutate(
-    predictions = round(inv_logit_scaled(!!as.name(post_no))*9, 0)) %>%
-    count(predictions < 1) 
-  
-  # counting number of times predictions were less than 1 and binding it to a df
-  if(any(tmp == T)){
-    tmp3 = rbind(tmp3, tmp)
-    tmp3 = tmp3 %>% slice(2) 
-    lesser = rbind(lesser, tmp3)
-    lesser_no = rbind(lesser_no, post_no)
-  }
-}
-
-# fixing column names
-greater_no <- greater_no %>% 
-  rename("pred_no" = "X.post_preds.1..")
-
-lesser_no <- lesser_no %>% 
-  rename("pred_no" = "X.post_preds.1..")
-
-# cbinding the name of the post preds and how many times they were out of bounds
-greater <- cbind(greater_no, greater)
-lesser <- cbind(lesser_no, lesser)
-
-```
 
 
-```{r}
-# getting the details of the posterior predictions
 
-# max no of predictions out of bounds for one trial
-max(greater$n) # 609
-609/6000 # ~ 10%
+```{r plot fit to SB}
+# code requires running fit_model with clean = T
 
-max(lesser$n) # 339
-339/6000 # ~ 6%
+# check participant 1, trial 1 - GOOD FIT
+draws_SB %>% mutate(
+  predictions = round(inv_logit_scaled(`post_preds[1]`)*9, 0),
+  predictions = ifelse(predictions > 8, 8, ifelse(predictions < 1, 1, predictions)) # fixing out of bounds
+  ) %>% 
+  ggplot() + 
+  aes(predictions) + 
+  geom_histogram(fill = "#36802d") + 
+  geom_vline(xintercept = 5, linetype="dotted", 
+                color = "red", size=1) +
+  scale_x_continuous(breaks = scales::pretty_breaks(n = 9)) +
+  theme_bw()+ 
+  labs(title = "SB: participant 1, trial 1, faceID 10") +
+
+
+# check participant 1, trial 2 - WORSE FIT
+draws_SB %>% mutate(
+  predictions = round(inv_logit_scaled(`post_preds[2]`)*9, 0),
+  predictions = ifelse(predictions > 8, 8, ifelse(predictions < 1, 1, predictions)) 
+  ) %>% 
+  ggplot() + 
+  aes(predictions) + 
+  geom_histogram(fill = "#36802d") + 
+  geom_vline(xintercept = 6, linetype="dotted", 
+                color = "red", size= 1) +
+  scale_x_continuous(breaks = scales::pretty_breaks(n = 9)) + 
+  theme_bw()+ 
+  labs(title = "SB: participant 1, trial 2, faceID 11") +
+
+
+# check participant 1, trial 10
+draws_SB %>% mutate(
+  predictions = round(inv_logit_scaled(`post_preds[10]`)*9, 0),
+  predictions = ifelse(predictions > 8, 8, ifelse(predictions < 1, 1, predictions)) 
+  ) %>% 
+  ggplot() + 
+  aes(predictions) + 
+  geom_histogram(fill = "#36802d") + 
+  geom_vline(xintercept = 6, linetype="dotted", 
+                color = "red", size= 1) +
+  scale_x_continuous(breaks = scales::pretty_breaks(n = 9)) + 
+  theme_bw()+ 
+  labs(title = "SB: participant 1, trial 10, faceID 19") + # goes up to 9
+
+# check participant 1, trial 11
+draws_SB %>% mutate(
+  predictions = round(inv_logit_scaled(`post_preds[13]`)*9, 0),
+  predictions = ifelse(predictions > 8, 8, ifelse(predictions < 1, 1, predictions)) 
+  ) %>% 
+  ggplot() + 
+  aes(predictions) + 
+  geom_histogram(fill = "#36802d") + 
+  geom_vline(xintercept = 4, linetype="dotted", 
+                color = "red", size= 1) +
+  scale_x_continuous(breaks = scales::pretty_breaks(n = 9)) + 
+  theme_bw()+ 
+  labs(title = "SB: participant 1, trial 13, faceID 22") 
 
 ```
-
+Checking how many times predictions were out of bounds.
 
 ```{r}
-# create "greater" function
-
+# create "greater" function which counts how many times predictions were > 8
 greater_f <- function(draws){
   greater = tibble() 
   greater_no = tibble()
@@ -354,116 +311,66 @@ greater_f <- function(draws){
   }
 }
   # fixing column names
- greater_no <- greater_no %>%
- rename("pred_no" = "X.post_preds.1..")
-  
+ # greater_no <- greater_no %>%
+ # rename("pred_no" = "X.post_preds.1..")
+ #  
   # cbinding the name of the post preds and how many times they were out of bounds
   greater <- cbind(greater_no, greater)
   
   return(greater)
 }
 
-test <- greater_f(draws_SB)
-
-
-#df_text <- map_dfr(1:1546, get_text)
-
-for(i in 1:10){
-  test <- greater_f(draws_SB, i)
-} # overwrites data
-
-test <- map_dfr(1:70, greater_f)
-
-
-col_no = 1
-# for loop to count how many times different post preds were out of bounds ( > 8 | < 1)
-
-lesser = tibble()
-
-lesser_no = tibble()
-
-for(i in 1:70){ # 70 trials = 70 post pred columns 
-  col_no = i # post preds column number
+# create lesser_f which count how many times predictions were < 1
+lesser_f <- function(draws){
+  lesser = tibble() 
+  lesser_no = tibble()
   
+  for (i in 1:70){
+  col_no = i
+  post_no = paste0("post_preds[", col_no, "]") # paste number into column name
   
-  # get predictions which are less than 1 
-  tmp3 <- tibble() # placeholder
-  tmp = draws_SB %>% 
+  # get predictions which are less than 1
+  tmp2 = tibble() #placeholder
+  tmp = draws %>% 
     mutate(
-    predictions = round(inv_logit_scaled(!!as.name(post_no))*9, 0)) %>%
+    predictions = round(inv_logit_scaled(!!as.name(post_no))*9, 0)) %>% 
     count(predictions < 1) 
   
   # counting number of times predictions were less than 1 and binding it to a df
   if(any(tmp == T)){
-    tmp3 = rbind(tmp3, tmp)
-    tmp3 = tmp3 %>% slice(2) 
-    lesser = rbind(lesser, tmp3)
+    tmp2 = rbind(tmp2, tmp)
+    tmp2 = tmp2 %>% slice(2)
+    lesser = rbind(lesser, tmp2)
     lesser_no = rbind(lesser_no, post_no)
   }
 }
-
-
-lesser_no <- lesser_no %>% 
-  rename("pred_no" = "X.post_preds.1..")
-
-# cbinding the name of the post preds and how many times they were out of bounds
-greater <- cbind(greater_no, greater)
-lesser <- cbind(lesser_no, lesser)
-
+  # fixing column names
+ # lesser_no <- lesser_no %>%
+ # rename("pred_no" = "X.post_preds.1..")
+ #  
+  # cbinding the name of the post preds and how many times they were out of bounds
+  lesser <- cbind(lesser_no, lesser)
+  
+  return(lesser)
+}
 ```
 
-
-```{r plot fit to SB}
-# code requires running fit_model with clean = T
-# p1 <- cogsci_data %>% 
-#     filter(ID == 1)
-
-# check participant 1, trial 1 - GOOD FIT
-draws_SB %>% mutate(
-  predictions = round(inv_logit_scaled(`post_preds[1]`)*9, 0),
-  predictions = ifelse(predictions > 8, 8, ifelse(predictions < 1, 1, predictions)) # easy but illegal fix?
-  ) %>% 
-  ggplot() + 
-  aes(predictions) + 
-  geom_histogram(fill = "#36802d") + 
-  geom_vline(xintercept = 5, linetype="dotted", 
-                color = "red", size=1) +
-  scale_x_continuous(breaks = scales::pretty_breaks(n = 9)) +
-  theme_bw()+ 
-  labs(title = "Simple Bayes fit to participant 1, trial 1, faceID 10")
-
-
-# check participant 1, trial 2 - WORSE FIT
-draws_SB %>% mutate(
-  predictions = round(inv_logit_scaled(`post_preds[2]`)*9, 0),
-  predictions = ifelse(predictions > 8, 8, ifelse(predictions < 1, 1, predictions)) # easy but illegal fix?
-  ) %>% 
-  ggplot() + 
-  aes(predictions) + 
-  geom_histogram(fill = "#36802d") + 
-  geom_vline(xintercept = 6, linetype="dotted", 
-                color = "red", size= 1) +
-  scale_x_continuous(breaks = scales::pretty_breaks(n = 9)) + 
-  theme_bw()+ 
-  labs(title = "Simple Bayes fit to participant 1, trial 2, faceID 11")
-
-
-# check participant 1, trial 10
-draws_SB %>% mutate(
-  predictions = round(inv_logit_scaled(`post_preds[10]`)*9, 0),
-  predictions = ifelse(predictions > 8, 8, ifelse(predictions < 1, 1, predictions)) # easy but illegal fix?
-  ) %>% 
-  ggplot() + 
-  aes(predictions) + 
-  geom_histogram(fill = "#36802d") + 
-  geom_vline(xintercept = 6, linetype="dotted", 
-                color = "red", size= 1) +
-  scale_x_continuous(breaks = scales::pretty_breaks(n = 9)) + 
-  theme_bw()+ 
-  labs(title = "Simple Bayes fit to participant 1, trial 10, faceID 19") # goes up to 9
-
+```{r}
+# using the functions to investigate how often the model samples extreme values 
+greater <- greater_f(draws_SB)
+lesser <- lesser_f(draws_SB)
 ```
 
+```{r}
+# getting the details 
+# mean no of predictions > 8
+mean(greater$n) # 60.97
+60.97/6000 * 100 # ~ 1% of 6000 iterations per trial
+
+# mean no of predictions < 1
+mean(lesser$n) # 82.3
+82.2/6000*100 # ~ 1.37%
+```
 
 ## Weighted Bayes
 
@@ -474,32 +381,39 @@ fit2WB <- fit_model(p1_data,  model = "WB", clean = F)
 
 ```{r check model quality}
 fit2WB$cmdstan_diagnose()
+fit2WB$summary()
+fit2WB$loo()
+```
 
+
+```{r check model quality}
 # Plot hairy caterpillars
 draws_WB <- as_draws_df(fit2WB$draws())
 
 # bias
 ggplot(draws_WB, aes(.iteration, bias, group = .chain, color=.chain)) + 
   geom_line() +
-  labs(title = "Simple Bayes - Bias") +
-  theme_classic()
+  labs(title = "Weighted Bayes - Bias") +
+  theme_classic() + 
+  theme(legend.position = 'none') +
 
 # SD 
 ggplot(draws_WB, aes(.iteration, SD, group = .chain, color=.chain)) + 
   geom_line() +
-  labs(title = "Simple Bayes - SD") +
-  theme_classic()
+  labs(title = "Weighted Bayes - SD") +
+  theme_classic() +
 
 # w1
 ggplot(draws_WB, aes(.iteration, w_self, group = .chain, color=.chain)) + 
   geom_line() +
-  labs(title = "Simple Bayes - Weight self") +
-  theme_classic()
+  labs(title = "Weighted Bayes - Weight self") +
+  theme_classic() +
+  theme(legend.position = 'none') +
 
 # w2
 ggplot(draws_WB, aes(.iteration, w_other, group = .chain, color=.chain)) + 
   geom_line() +
-  labs(title = "Simple Bayes - Weight other") +
+  labs(title = "Weighted Bayes - Weight other") +
   theme_classic()
 
 
@@ -512,7 +426,7 @@ ggplot(draws_WB) +
   xlab("Rate") + # Tendency to choose 1 ??
   ylab("Posterior Density") +
   theme_classic() + 
-  labs(title = "Prior and post distribution of bias")
+  labs(title = "Bias") + 
 
 # sd
 ggplot(draws_WB) +
@@ -521,7 +435,7 @@ ggplot(draws_WB) +
   xlab("Rate") + # Tendency to choose 1 ??
   ylab("Posterior Density") +
   theme_classic() + 
-  labs(title = "Prior and post distribution of SD")
+  labs(title = "SD") +
 
 # weight self
 ggplot(draws_WB) +
@@ -530,8 +444,8 @@ ggplot(draws_WB) +
   xlab("Rate") + # Tendency to choose 1 ??
   ylab("Posterior Density") +
   theme_classic() + 
-  labs(title = "Prior and post distribution of weight self") + 
-  coord_cartesian(xlim = c(0, 1.25))
+  labs(title = "Weight self") + 
+  coord_cartesian(xlim = c(0, 1.25)) +
 
 # weight other
 ggplot(draws_WB) +
@@ -540,7 +454,7 @@ ggplot(draws_WB) +
   xlab("Rate") + # Tendency to choose 1 ??
   ylab("Posterior Density") +
   theme_classic() + 
-  labs(title = "Prior and post distribution of weight other")+
+  labs(title = "Weight other")+
     coord_cartesian(xlim = c(0, 1.25))
 
 ```
@@ -558,7 +472,7 @@ draws_WB %>% mutate(
                 color = "red", size=1) +
   scale_x_continuous(breaks = scales::pretty_breaks(n = 9)) +
   theme_bw()+ 
-  labs(title = "Weighted Bayes fit to participant 1, trial 1, face ID 10")
+  labs(title = "WB: participant 1, trial 1, face ID 10") +
 
 
 # check participant 1, trial 2 - WORSE FIT
@@ -571,7 +485,7 @@ draws_WB %>% mutate(
                 color = "red", size= 1) +
   scale_x_continuous(breaks = scales::pretty_breaks(n = 9)) + 
   theme_bw()+ 
-  labs(title = "Weighted Bayes fit to participant 1, trial 2, face ID 11")
+  labs(title = "WB: participant 1, trial 2, face ID 11") +
 
 draws_WB %>% mutate(
   predictions = round(inv_logit_scaled(`post_preds[10]`)*9, 0)) %>% 
@@ -582,9 +496,38 @@ draws_WB %>% mutate(
                 color = "red", size= 1) +
   scale_x_continuous(breaks = scales::pretty_breaks(n = 9)) + 
   theme_bw()+ 
-  labs(title = "Simple Bayes fit to participant 1, trial 10, faceID 19")
+  labs(title = "WB: participant 1, trial 10, faceID 19") +
+
+draws_WB %>% mutate(
+  predictions = round(inv_logit_scaled(`post_preds[13]`)*9, 0)) %>% 
+  ggplot() + 
+  aes(predictions) + 
+  geom_histogram(fill = "#77ab59") + 
+  geom_vline(xintercept = 4, linetype="dotted", 
+                color = "red", size= 1) +
+  scale_x_continuous(breaks = scales::pretty_breaks(n = 9)) + 
+  theme_bw()+ 
+  labs(title = "WB: participant 1, trial 13, faceID 22")
+
+
 
 ```
+# checking post preds out of bounds
+
+```{r}
+greater_WB <- greater_f(draws_WB)
+lesser_WB <- lesser_f(draws_WB)
+
+mean(greater_WB$n) # 41.3871
+41.3871/6000*100 # 0.69%
+
+mean(lesser_WB$n) # 37.26667
+37.26667/6000*100 # 0.62%
+
+
+```
+
+
 # Model comparison - Sigrid's version - testing stuff
 ```{r}
 Loo_SB <- fit2SB$loo(save_psis = TRUE, cores = 4)
@@ -661,12 +604,25 @@ for(i in 1:3){
 
 
 ```{r loop through participants}
-# run it from participant 1 to 32 and then again from 34 to 45. rbind the df's
+# there is no participant 33 
+# run it from participant 1 to 32 and then again from 34 to 45. append to df
 start_time <- Sys.time()
 
-participants <- 32 ###45 # there is no participant 33 run two timer 
-
 MC_data <- tibble()
+for (p in 1:32){
+  # prepare data
+  data <- prep_data(cogsci_data, p)
+  # fit to simple bayes
+  fit2SB_temp <- fit_model(data, model = "SB", clean = F)
+  # fit to weighted bayes
+  fit2WB_temp <- fit_model(data, model = "WB", clean = F)
+  # compare models
+  temp <- compare(fit1 = fit2SB_temp, fit2 = fit2WB_temp, p)
+  # append to df
+  MC_data <- rbind(MC_data, temp)
+  #MC_data <- comparison
+}
+
 for (p in 34:45){
   # prepare data
   data <- prep_data(cogsci_data, p)
@@ -684,18 +640,6 @@ for (p in 34:45){
 end_time <- Sys.time()
 processing_time <- end_time - start_time
 ```
-
-```{r}
-# copy the df of the first run (1:32) and run code above from 34:45
-MC_data1 <- MC_data
-
-# rbind full df when code has been run through all participants
-MC_data_full <- rbind(MC_data1,MC_data)
-
-# copy name so I don't have to change the next chunks of code
-MC_data <- MC_data_full
-```
-
 
 ```{r count and plot}
 
